Add note addressing IDE problems with 'ReservingStackAreas'